templates/clean-blog/style.css
/* ... */
.serendipity_image_center {
  display: block;
  margin: 0 auto 1em auto;
}
p > img.serendipity_image_center {
    margin: auto auto 1em;
}
.serendipity_imageComment_center {
  display: block;
  margin: 0 auto 1em auto;
}
.serendipity_imageComment_txt {
  border: 0;
  color: #808080;
  display: block;
  font-size: .8125em;
  font-style: italic;
  line-height: 1.5em;
  margin: 0;
  padding: .5em;
  text-align: center;
}
.serendipity_image_block .serendipity_imageComment_txt {
  padding: 0 0 .5em;
}

/* styx media gallery styles start */

/* reset bootstrap default sets for .row-ed galleries */
.row.serendipity_image_block::before,
.row.serendipity_image_block::after{
    display: initial;
    content: normal;
}
@media screen and (min-width: 400px) {
    .serendipity_image_block.col.c3 .serendipity_image_link {
        display: inline-block;
        overflow: auto;
        margin: auto; }
}
@media screen and (min-width: 768px) {
    .serendipity_image_block.col.c3 .serendipity_image_link  {
        display: block; }
    .serendipity_image_block.col.c3 .serendipity_image_link {
        overflow: hidden;
        margin: auto; }
}
.serendipity_image_block.col.c4 {
    display: inline-block;
}
/* Auto scales 400px left and right oriented image thumbs with floated text - DOES NOT touch smaller defined images, which is perfect! */
@media screen and (min-width: 400px) {
    .page_content .serendipity_imageComment_left,
    .page_content .serendipity_imageComment_right,
    .page_content p .serendipity_image_left,
    .page_content p .serendipity_image_right,
    .post .serendipity_imageComment_left,
    .post .serendipity_imageComment_right,
    .post p .serendipity_image_left,
    .post p .serendipity_image_right {
      max-width: 44.5%; }
    .serendipity_image_block:not(.col):not(.row) > .serendipity_image_left {
      max-width: 48%; }
    .post p > a.serendipity_image_link  .serendipity_image_left {
      max-width: 75%; }
}
@media screen and (min-width: 768px) {
    .page_content .serendipity_imageComment_left,
    .page_content .serendipity_imageComment_right,
    .page_content p .serendipity_image_left,
    .page_content p .serendipity_image_right,
    .post .serendipity_imageComment_left,
    .post .serendipity_imageComment_right,
    .post p .serendipity_image_left,
    .post p .serendipity_image_right {
      max-width: 47%; }
    .serendipity_image_block:not(.col):not(.row) > .serendipity_image_left {
      max-width: 50%; }
    .post p > a.serendipity_image_link  .serendipity_image_left {
      max-width: 100%; }
}
/* style to center */
.serendipity_image_center {
    display: block;
    margin: 0 auto 1em; }
    p > img.serendipity_image_center {
    margin: 1rem auto; }
.serendipity_image_block {
    width: 100%;
}
.serendipity_image_block.col .serendipity_image_link {
    margin: auto;
}
/* overwrite special row gallery comment container */
.serendipity_image_block.row .serendipity_imageComment_left {
    max-width: 260px; }
    .serendipity_image_block.row .serendipity_imageComment_left .serendipity_imageComment_img {
        padding: 0; }
    .serendipity_image_block.row .serendipity_imageComment_left  .serendipity_imageComment_img img {
      padding: 1px 0; }
/* overwrite fallback gallery comment container margins and floats */
.serendipity_image_block:not(.col):not(.row) > .serendipity_image_left,
.serendipity_image_block:not(.col):not(.row) > .serendipity_image_right {
    margin: .5em 0 0 0;
}
/* overwrite fallback gallery comment container margins and some of this comment styles */
.serendipity_image_block .serendipity_imageComment_left,
.serendipity_image_block .serendipity_imageComment_right {
    margin-top: auto;
    margin-right: unset;
    background-color: unset;
}
.serendipity_image_block.row .serendipity_image_link .serendipity_image_left {
    margin: 0 auto;
}
/* keep in mind .row and .col have bootstrap presets which interfere our galleries */
.serendipity_image_block.col {
    padding: initial;
}
.serendipity_image_block.row {
    margin-right: initial;
    margin-left: initial;
}
.serendipity_image_block.col .serendipity_imageComment_left {
    display: block;
    margin: auto;
}
@media screen and (min-width: 552px) {
  .serendipity_image_block.col .serendipity_imageComment_left .serendipity_imageComment_img,
  .serendipity_image_block.col .serendipity_imageComment_left .serendipity_image_left {
    padding: 0; }
}
.serendipity_image_block.col.c3 .serendipity_image_link {
    margin: auto;
}
/*.serendipity_image_block.col .serendipity_image_link,
.serendipity_image_block.col .serendipity_image_left,
.serendipity_image_block.col .serendipity_image_right,
.serendipity_image_block.col.c2 .serendipity_image_link .serendipity_image_left,
.serendipity_image_block.col.c2 .serendipity_image_left {
    margin: auto; }*/

.serendipity_image_block .serendipity_imageComment_left .serendipity_imageComment_img,
.serendipity_image_block .serendipity_imageComment_right .serendipity_imageComment_img {
    border: 0 none !important;
    display: inline-block; }

/* styx media gallery styles end */

.page-footer {
  padding: 30px 0;
}
.entry-footer {
  padding: 20px 0;
}
.btn-group-sm > .btn,
.btn-sm {
  border-radius: 3px!important;
  font-size: 12px!important;
  line-height: 1.5!important;
  padding: 5px 10px!important;
}
.pager li > a,
.pager li > span {
  border-color: #ccc;
}
.category-list {
  line-height: 1.6em;
}
.category-children {
  list-style: none;
  padding-left: 24px;
}
.serendipity_freeTag {
  margin-left: auto;
  margin-right: 0px;
  text-align: left;
  font-size: 80%;
  display: block;
  margin-top: 1em;
  margin-bottom: 0px;
  color: #808080;
}
.serendipity_freeTag_related {
  color: #808080;
  display: block;
  font-size: 80%;
  margin: 10px 0 0 0;
  text-align: left;
}
.serendipity_freeTag a {
  font-size: inherit;
  text-decoration: none;
}
.serendipity_freeTag a:hover {
  text-decoration: underline;
}
/* ... */

